# QCSim

./: CMakeLists.txt  QCSim.sln  README.md  qcsim.vcxproj  qcsim.vcxproj.filters
.github/workflows/: cmake-single-platform.yml
QCSim/: AdderTests.cpp  BernsteinVazirani.h  CatDisentangler.h  CatEntangler.h  CheckCHSHInequality.h  Clifford.h  CliffordTests.cpp  CoinFlipping.h  DeutschJozsa.h  DeutschJozsaTests.cpp  DistributedCNOT.h  DistributedTests.cpp  DraperAdder.h  EntanglementSwapping.h  ErrorCorrection3Qubits.h  ErrorCorrectionBase.h  ErrorCorrectionTests.cpp  ExtStabilizerTests.cpp  ExtendedStabilizer.h  FFT.cpp  FFT.h  Frame.h  Function.h  GamesTests.cpp  GatesTests.cpp  GeneralElitzurVaidmanBomb.h  GeneralizedEntanglingGate.h  Generator.h  GroverAlgorithm.cpp  GroverAlgorithm.h  HadamardTransform.h  HardyParadox.h  IsingModel.h  IsingTests.cpp  MPSSimulator.h  MPSSimulatorBase.h  MPSSimulatorImpl.h  MPSSimulatorInterface.h  MPSSimulatorTests.cpp  MagicSquare.h  (+56 more)
